# ferris-lang

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: comparison.ferris  conditionals.ferris  factorial.ferris  fibonacci.ferris  hello.ferris  loops.ferris  math.ferris
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs  value.rs
