[package]
name = "ferris-lang"
version = "0.1.0"
edition = "2021"
description = "The Ferris programming language - a simple language written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/ferris-lang"
keywords = ["compiler", "interpreter", "language", "parser", "ferris"]
categories = ["compilers"]

[dependencies]

[dev-dependencies]

[[bin]]
name = "ferris"
path = "src/main.rs"